--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "mysql2": "^2.2.5",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
